--- a/index.html
+++ b/index.html
@@ -169,6 +169,78 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="container">
+            <div class="portfolio__top">
+                <h2 class="title">Portfolio</h2>
+                <div class="portfolio__filter-btn">
+                    <button class="portfolio__btn">ALL</button>
+                    <button class="portfolio__btn">BRANDING</button>
+                    <button class="portfolio__btn">DESIGN</button>
+                    <button class="portfolio__btn">PHOTOGRAPHY</button>
+                    <button class="portfolio__btn">ILLUSTRATION</button>
+                </div>
+            </div>
+        </div>
+        <div class="portfolio__content">
+            <div class="portfolio__item">
+                <img src="images/" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/2.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/3.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/4.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/5.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/6.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/7.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/8.jpg" alt="portfolio images">
+            </div>
+            <div class="portfolio__item">
+                <img src="images/portfolio/9.jpg" alt="portfolio images">
+            </div>
+        </div>
+        <a class="portfolio_add" href="#">
+            VIEW MORE PROJECTS
+        </a>
+        <blockquote class="blockquote">
+            «Неважно какую историю вы рассказываете, главное – сделайте своего покупателя героем»
+            <span class="blockquote__author">Крис Броган</span>
+        </blockquote>
+        <div class="portfolio__video">
+            <a сlass="portfolio__video-link" href="#"></a>
+        </div>
+        <div class="portfolio__numbers">
+            <h5 class="portfolio__numbers-item">
+                305
+                <span>Web Design</span>
+            </h5>
+            <h5 class="portfolio__numbers-item">
+                220
+                <span>Logo Designs</span>
+            </h5>
+            <h5 class="portfolio__numbers-item">
+                52
+                <span>Print Designs</span>
+            </h5>
+            <h5 class="portfolio__numbers-item">
+                88
+                <span>Mobile Apps</span>
+            </h5>
+        </div>        
+    </section>
+    
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
