Доделал верстку блока портфолио
Доделал верстку блока портфолио и подключили дж, джкуэрри.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="portfolio__content">
             <div class="portfolio__item">
-                <img src="images/" alt="portfolio images">
+                <img src="images/portfolio/1.jpg" alt="portfolio images">
             </div>
             <div class="portfolio__item">
                 <img src="images/portfolio/2.jpg" alt="portfolio images">
@@ -219,31 +219,36 @@
             <span class="blockquote__author">Крис Броган</span>
         </blockquote>
         <div class="portfolio__video">
-            <a сlass="portfolio__video-link" href="#"></a>
+            <a сlass="portfolio__video-link" href="#">
+                <img src="images/play.svg" alt="play icon">
+            </a>
         </div>
-        <div class="portfolio__numbers">
-            <h5 class="portfolio__numbers-item">
-                305
-                <span>Web Design</span>
-            </h5>
-            <h5 class="portfolio__numbers-item">
-                220
-                <span>Logo Designs</span>
-            </h5>
-            <h5 class="portfolio__numbers-item">
-                52
-                <span>Print Designs</span>
-            </h5>
-            <h5 class="portfolio__numbers-item">
-                88
-                <span>Mobile Apps</span>
-            </h5>
-        </div>        
+        <div class="container">
+            <div class="portfolio__numbers">
+                <h5 class="portfolio__numbers-item">
+                    305
+                    <span>Web Design</span>
+                </h5>
+                <h5 class="portfolio__numbers-item">
+                    220
+                    <span>Logo Designs</span>
+                </h5>
+                <h5 class="portfolio__numbers-item">
+                    52
+                    <span>Print Designs</span>
+                </h5>
+                <h5 class="portfolio__numbers-item">
+                    88
+                    <span>Mobile Apps</span>
+                </h5>
+            </div>
+        </div>
     </section>
     
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="js/mixitup.js"></script>
     <script> src = 'js/main.js'</script>
 </body>
 
