Доделан блок портфолио
Доделан блок портфолио, сделана вся логика JavaScript
Проект доделан на 50%

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/jquery.fancybox.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -83,9 +84,14 @@
                     About Us
                 </h2>
                 <div class="about__text">
-                    <p>Практика показывает, что большие продажи далеко не всегда зависят от того, сколько вы потратите на продвижение сайта и рекламную кампанию. Значительно сильнее конечный результат зависит от правильной организации кампании. Мы достигаем максимальной эффективности и помогаем сберечь бюджеты наших клиентов, используя стратегический интернет-маркетинг.
+                    <p>Практика показывает, что большие продажи далеко не всегда зависят от того, сколько вы потратите
+                        на продвижение сайта и рекламную кампанию. Значительно сильнее конечный результат зависит от
+                        правильной организации кампании. Мы достигаем максимальной эффективности и помогаем сберечь
+                        бюджеты наших клиентов, используя стратегический интернет-маркетинг.
                     </p>
-                    <p>Определяем цели продвижения — что наш клиент хочет получить, когда работа будет сделана. Проводим маркетинговые исследования рынка, целевой аудитории, конкурентной среды. При разработке стратегии учитываем все имеющиеся данные.
+                    <p>Определяем цели продвижения — что наш клиент хочет получить, когда работа будет сделана. Проводим
+                        маркетинговые исследования рынка, целевой аудитории, конкурентной среды. При разработке
+                        стратегии учитываем все имеющиеся данные.
                     </p>
                 </div>
             </div>
@@ -100,21 +106,24 @@
                 <div class="expertise__info">
                     <div class="expertise__info-item">
                         BRANDING
-                        <span   style="width: calc(100% - 90%);">90%</span>
+                        <span style="width: calc(100% - 90%);">90%</span>
                     </div>
                     <div class="expertise__info-item">
                         DESIGN
-                        <span   style="width: calc(100% - 80%);">80%</span>
+                        <span style="width: calc(100% - 80%);">80%</span>
                     </div>
                     <div class="expertise__info-item">
                         DEVELOPMENT
-                        <span   style="width: calc(100% - 85%);">85%</span>
+                        <span style="width: calc(100% - 85%);">85%</span>
                     </div>
                 </div>
                 <div class="expertise__text">
-                    <p>В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка контент-стратегии, распределение использования различных каналов коммуникации.
+                    <p>В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка
+                        контент-стратегии, распределение использования различных каналов коммуникации.
                     </p>
-                    <p>Реализуем принятую стратегию, отслеживая промежуточные результаты, и корректируя будущие действия с учетом изменений. Главной целью в этом процессе для нас является конечный результат, а не следование планам.
+                    <p>Реализуем принятую стратегию, отслеживая промежуточные результаты, и корректируя будущие действия
+                        с учетом изменений. Главной целью в этом процессе для нас является конечный результат, а не
+                        следование планам.
                     </p>
                 </div>
             </div>
@@ -124,7 +133,8 @@
                         GRAPHIC DESIGN
                     </h4>
                     <p class="expertise__item-text">
-                        Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов,разработка презентаций, дизайн выставочных стендов
+                        Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов,разработка презентаций, дизайн
+                        выставочных стендов
                     </p>
                 </div>
                 <div class="expertise__item expertise__item--dev">
@@ -132,7 +142,8 @@
                         WEB DEVELOPMENT
                     </h4>
                     <p class="expertise__item-text">
-                        Разрабатываем веб сайты от концепции до реализации. Дизайн, верстка, программирование и запуск сайт в сеть
+                        Разрабатываем веб сайты от концепции до реализации. Дизайн, верстка, программирование и запуск
+                        сайт в сеть
                     </p>
                 </div>
                 <div class="expertise__item expertise__item--marketing">
@@ -140,7 +151,8 @@
                         MARKETING
                     </h4>
                     <p class="expertise__item-text">
-                        Разрабатываем маркетинговое и рекламное продвижение Вашего продукта или услуги под ключ и на любой бюджет.
+                        Разрабатываем маркетинговое и рекламное продвижение Вашего продукта или услуги под ключ и на
+                        любой бюджет.
                     </p>
                 </div>
             </div>
@@ -156,11 +168,15 @@
                 </h2>
                 <div class="magic__text">
                     <p>
-                        Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных и дизайнерских услуг в Харькове и Украине: маркетинговые исследования рынков, товаров, потребителей, планирование комплекса маркетинга, реклама, проведение рекламных кампаний, брендинг, рекламный дизайн, pr.
-    
+                        Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных и дизайнерских услуг в
+                        Харькове и Украине: маркетинговые исследования рынков, товаров, потребителей, планирование
+                        комплекса маркетинга, реклама, проведение рекламных кампаний, брендинг, рекламный дизайн, pr.
+
                     </p>
                     <p>
-                        Нами накоплен немалый опыт работы в реальном бизнесе, в самых различных отраслях – от недвижимости до аптечного и медицинского бизнеса. Мы не просто беремся решать задачи наших клиентов, мы сами вышли из бизнес-среды и понимаем суть бизнес-процессов.
+                        Нами накоплен немалый опыт работы в реальном бизнесе, в самых различных отраслях – от
+                        недвижимости до аптечного и медицинского бизнеса. Мы не просто беремся решать задачи наших
+                        клиентов, мы сами вышли из бизнес-среды и понимаем суть бизнес-процессов.
                     </p>
                     <p>
                         Мы говорим с бизнесом на одном языке!
@@ -174,41 +190,68 @@
             <div class="portfolio__top">
                 <h2 class="title">Portfolio</h2>
                 <div class="portfolio__filter-btn">
-                    <button class="portfolio__btn">ALL</button>
-                    <button class="portfolio__btn">BRANDING</button>
-                    <button class="portfolio__btn">DESIGN</button>
-                    <button class="portfolio__btn">PHOTOGRAPHY</button>
-                    <button class="portfolio__btn">ILLUSTRATION</button>
+                    <button class="portfolio__btn" data-filter="all">ALL</button>
+                    <button class="portfolio__btn" data-filter=".category-a">BRANDING</button>
+                    <button class="portfolio__btn" data-filter=".category-b">DESIGN</button>
+                    <button class="portfolio__btn" data-filter=".category-c">PHOTOGRAPHY</button>
+                    <button class="portfolio__btn" data-filter=".category-d">ILLUSTRATION</button>
                 </div>
             </div>
         </div>
         <div class="portfolio__content">
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-a">
                 <img src="images/portfolio/1.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-a">
                 <img src="images/portfolio/2.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-b">
                 <img src="images/portfolio/3.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-b">
                 <img src="images/portfolio/4.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-b">
                 <img src="images/portfolio/5.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-c">
                 <img src="images/portfolio/6.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-c">
                 <img src="images/portfolio/7.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-c">
                 <img src="images/portfolio/8.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
-            <div class="portfolio__item">
+            <div class="portfolio__item mix category-d">
                 <img src="images/portfolio/9.jpg" alt="portfolio images">
+                <a class="portfolio__item-link" href="#">
+                    SHOW PROJECT
+                </a>
             </div>
         </div>
         <a class="portfolio_add" href="#">
@@ -219,7 +262,7 @@
             <span class="blockquote__author">Крис Броган</span>
         </blockquote>
         <div class="portfolio__video">
-            <a сlass="portfolio__video-link" href="#">
+            <a data-fancybox сlass="portfolio__video-link" href="https://www.youtube.com/watch?v=lV9WvA6iV9gd">
                 <img src="images/play.svg" alt="play icon">
             </a>
         </div>
@@ -244,12 +287,13 @@
             </div>
         </div>
     </section>
-    
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
-    <script> src = 'js/main.js'</script>
+    <script src="js/jquery.fancybox.js"></script>
+    <script src='js/main.js'></script>
 </body>
 
 </html>
