Сделан блок Our Team

--- a/index.html
+++ b/index.html
@@ -371,6 +371,29 @@
         </div>
     </section>
 
+    <section class="team">
+        <div class="container">
+            <h2 class="title team__title">Our Team</h2>
+            <div class="team__items">
+                <div class="team__item">
+                    <img src="images/team-1.jpg" alt="МАКС">
+                    <h6 class="team__name">МАКС</h6>
+                    <p class="team__position">CEO</p>
+                </div>
+                <div class="team__item">
+                    <img src="images/team-2.jpg" alt="АНЯ">
+                    <h6 class="team__name">АНЯ</h6>
+                    <p class="team__position">Co-Founder</p>
+                </div>
+                <div class="team__item">
+                    <img src="images/team-3.jpg" alt="МИЛА">
+                    <h6 class="team__name">МИЛА</h6>
+                    <p class="team__position">Designer</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
