Сделан и оформлен блог Pricing

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class=" ">
@@ -308,8 +308,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class="slider-blog__item-descr">
@@ -320,8 +320,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class="slider-blog__item-descr">
@@ -332,8 +332,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class="slider-blog__item-descr">
@@ -344,8 +344,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class="slider-blog__item-descr">
@@ -356,8 +356,8 @@
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
-                        АНИМИРОВАННЫЙ ЛОГОТИП –
-                        ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                            АНИМИРОВАННЫЙ ЛОГОТИП –
+                            ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
                         </h3>
                     </a>
                     <p class="slider-blog__item-descr">
@@ -365,7 +365,7 @@
                         модно? Давайте обсудим.
                     </p>
                 </div>
-                
+
 
             </div>
         </div>
@@ -394,6 +394,62 @@
         </div>
     </section>
 
+    <section class="pricing">
+        <div class="container">
+            <h2 class="title pricing__title">
+                Pricing Plans
+            </h2>
+            <div class="pricing__items">
+
+                <ul class="pricing__item">
+                    <li class="pricing__item-name">Basic</li>
+                    <li class="pricing__item-num"><sup>$</sup>290</li>
+                    <li>Logo Design</li>
+                    <li>1 Website Design</li>
+                    <li>1 Domain Free</li>
+                    <li>3 Month License</li>
+                    <li>1 GB Storage</li>
+                    <li>
+                        <a class="pricing__item-link" href="#">
+                            CHOOSE PLAN
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="pricing__item">
+                    <li class="pricing__item-name">Starter</li>
+                    <li class="pricing__item-num"><sup>$</sup>500</li>
+                    <li>2 Logo Design</li>
+                    <li>2 Website Design</li>
+                    <li>1 Domain Free</li>
+                    <li>6 Month License</li>
+                    <li>1 GB Storage</li>
+                    <li>
+                        <a class="pricing__item-link" href="#">
+                            CHOOSE PLAN
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="pricing__item">
+                    <li class="pricing__item-name">Professional</li>
+                    <li class="pricing__item-num"><sup>$</sup>1500</li>
+                    <li>3 Logo Design</li>
+                    <li>3 Website Design</li>
+                    <li>2 Domain Free</li>
+                    <li>12 Month License</li>
+                    <li>2 GB Storage</li>
+                    <li>
+                        <a class="pricing__item-link" href="#">
+                            CHOOSE PLAN
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
