Добавен блок clients

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
         </div>
     </header>
 
-
     <section class="about">
         <div class="container">
             <div class="about__inner">
@@ -98,7 +97,6 @@
             </div>
         </div>
     </section>
-
 
     <section class="expertise">
         <div class="container">
@@ -160,7 +158,6 @@
         </div>
     </section>
 
-
     <section class="magic">
         <div class="container">
             <div class="magic__inner">
@@ -186,6 +183,7 @@
             </div>
         </div>
     </section>
+
     <section class="portfolio">
         <div class="container">
             <div class="portfolio__top">
@@ -292,7 +290,6 @@
     <section class="slider-blog">
         <div class="container">
             <div class="slider-blog__inner">
-
                 <div class="slider-blog__item">
                     <a class="slider-blog__item-link" href="#">
                         <h3 class="slider-blog__item-title">
@@ -365,8 +362,6 @@
                         модно? Давайте обсудим.
                     </p>
                 </div>
-
-
             </div>
         </div>
     </section>
@@ -400,7 +395,6 @@
                 Pricing Plans
             </h2>
             <div class="pricing__items">
-
                 <ul class="pricing__item">
                     <li class="pricing__item-name">Basic</li>
                     <li class="pricing__item-num"><sup>$</sup>290</li>
@@ -415,7 +409,6 @@
                         </a>
                     </li>
                 </ul>
-
                 <ul class="pricing__item">
                     <li class="pricing__item-name">Starter</li>
                     <li class="pricing__item-num"><sup>$</sup>500</li>
@@ -430,7 +423,6 @@
                         </a>
                     </li>
                 </ul>
-
                 <ul class="pricing__item">
                     <li class="pricing__item-name">Professional</li>
                     <li class="pricing__item-num"><sup>$</sup>1500</li>
@@ -445,11 +437,21 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
-
         </div>
     </section>
+
+    <div class="clients">
+        <div class="container">
+            <ul class="clients__list">
+                <li><img src="images/client/1.png" alt="client-1"></li>
+                <li><img src="images/client/2.png" alt="client-2"></li>
+                <li><img src="images/client/3.png" alt="client-3"></li>
+                <li><img src="images/client/4.png" alt="client-4"></li>
+                <li><img src="images/client/5.png" alt="client-5"></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
