--- a/index.html
+++ b/index.html
@@ -467,6 +467,48 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="footer__top">
+            <a class="footer__logo" href="#" >
+                <img src="images/footer-logo.svg" alt="Логотип">
+            </a>
+            <ul class="footer__social">
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">FACEBOOK</a>
+                </li>
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">TWITTER</a>
+                </li>
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">GOOGLE+</a>
+                </li>
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">BEHANCE</a>
+                </li>
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">DRIBBLE</a>
+                </li>
+                <li class="footer__social-list">
+                    <a class="footer__social-link" href="#">INSTAGRAM</a>
+                </li>
+            </ul>
+            <div class="footer__contact">
+                <adress class="adress">
+                Украина, Харьков ул. Тобольская, 63
+                </adress>
+                <a class="phone" href="tel:+3806765252222">(38067) 65 252 222</a>
+                <a class="email" href="mailto:info@mail.com">info@mail.com</a>
+            </div>
+            <a class="go-top" href="#">
+                <img src="images/angle-up.svg" alt="arrow top">
+            </a>
+
+        </div>
+        <div class="footer__copy">
+            <p>@2020 O...Marketing</p>
+        </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
     <script src="js/slick.min.js"></script>
